@@ -1,16 +1,11 @@
 #!/usr/bin/make -f
 
+DISABLE_UPDATE_UPLOADERS := 1
+include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
 include /usr/share/gnome-pkg-tools/1/rules/check-dist.mk
 -include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
 
 GNOME_MODULE := glib
-
-# Members list of Debian GNOME Maintainers
-TEAM_LIST ?= /usr/share/gnome-pkg-tools/pkg-gnome.team
-
-# Remove maintainer from uploaders list
-maintainer := $(shell sed -n 's/^Maintainer: //p' debian/control.in)
-uploaders := $(shell grep -vF '$(maintainer)' $(TEAM_LIST))
 
 STAMP_DIR := debian/stampdir
 
@@ -150,7 +145,7 @@ debian/control:
 		-e "s#@UDEB_PKG@#$(UDEB_PKG)#g" \
 		-e "s#@DOC_PKG@#$(DOC_PKG)#g" \
 		-e "s#@DEBUG_PKG@#$(DEBUG_PKG)#g" \
-		-e "s#@GNOME_TEAM@#$(uploaders)#g" \
+		-e "s#@GNOME_TEAM@#$(UPLOADERS)#g" \
 		$@.in > $@
 
 clean: debian/control
