@@ -2,6 +2,8 @@ glib2.0 (2.12.11-2) UNRELEASED; urgency=low
 
   * Run "make check" test suite for the deb flavor except if DEB_BUILD_OPTIONS
     contains the "nocheck" keyword; ignore failures.
+  * Include the new uploaders.mk from gnome-pkg-tools instead of duplicating
+    its logic; build-dep on gnome-pkg-tools >= 0.11.
 
  -- Loic Minier <lool@dooz.org>  Mon, 02 Apr 2007 15:16:13 +0200
 
